[package]
name = "crates-io-zero-review-demo"
version = "0.0.2"
edition = "2024"
description = "No-op demo crate."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ben-guo-dev/crates-io-zero-review-demo"
keywords = ["demo", "noop"]
categories = ["development-tools"]

[dependencies]
